--- a/mopidy_mqFrontend/ext.conf
+++ b/mopidy_mqFrontend/ext.conf
@@ -4,8 +4,8 @@
 
 [mqfronted]
 enable=true
-#topic=mopidy
-#host=localhost
-#port=1883
-#username=
-#password=
+topic=mopidy
+host=localhost
+port=1883
+username=
+password=
